# rhel-rivendell-installer

./: .gitignore  ChangeLog  Makefile.am  NEWS  PACKAGE_VERSION  README  configure.ac  rhel-rivendell-installer-web.spec.in  rhel-rivendell-installer.spec.in
assets/: Makefile.am  RPM-GPG-KEY-ReywareLLC  Reyware.repo  autologin.patch  installer_install_rivendell.sh  rd.conf-sample
docs/: Makefile.am  index.xml
repo/: Makefile.repo  README  install_rivendell.sh  install_rivendell_devel.sh  sanity_check.sh
