## Makefile.am
##
## assets/ Makefile.am for rhel-rivendell-installer
##
##   (C) Copyright 2016-2022 Fred Gleason <fredg@paravelsystems.com>
##
##   This program is free software; you can redistribute it and/or modify
##   it under the terms of the GNU General Public License version 2 as
##   published by the Free Software Foundation.
##
##   This program is distributed in the hope that it will be useful,
##   but WITHOUT ANY WARRANTY; without even the implied warranty of
##   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
##   GNU General Public License for more details.
##
##   You should have received a copy of the GNU General Public
##   License along with this program; if not, write to the Free Software
##   Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
##
## Use automake to process this into a Makefile.in


EXTRA_DIST = asound.conf\
             autologin.patch\
             auto.misc.client_template\
             auto.misc.template\
             auto.rd.audiostore.template\
             fop-2.6-bin.tar.gz\
             installer_install_rivendell.sh\
             limits.conf\
             no_screen_blank.conf\
             paravel_support.pdf\
             rdairplay_skin.png\
             rdpanel_skin.png\
             Reyware.repo\
             RPM-GPG-KEY-Reyware\
             rsyslog.conf.patch\
             selinux.config\
             smb.conf\
             xfce-config.tgz

CLEANFILES = *~

MAINTAINERCLEANFILES = *~\
                       Makefile.in
